--- a/pom.xml
+++ b/pom.xml
@@ -49,18 +49,21 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>jakarta.json</groupId>
-            <artifactId>jakarta.json-api</artifactId>
-            <version>2.1.3</version>
-            <scope>provided</scope>
-        </dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-reactivestreams</artifactId>
+            <version>5.0.0</version>
+        </dependency>    
         <dependency>
-            <groupId>jakarta.json.bind</groupId>
-            <artifactId>jakarta.json.bind-api</artifactId>
-            <version>3.0.0</version>
-            <scope>provided</scope>
-        </dependency>  
-        
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-core</artifactId>
+            <version>5.0.0</version>
+        </dependency>   
+        <dependency>
+            <groupId>org.reactivestreams</groupId>
+            <artifactId>reactive-streams</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+                           
         <!-- Test Dependencies-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
