--- a/.github/workflows/ci-pull.yml
+++ b/.github/workflows/ci-pull.yml
@@ -8,6 +8,8 @@ on:
     branches: [ "main" ]
   push:
     branches: [ "actions"]
+  schedule:
+    - cron: "0 12 * * 1-5"
 
 permissions:
   contents: read
