--- a/.github/workflows/ci-pull.yml
+++ b/.github/workflows/ci-pull.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [ "main" ]
   push:
-    branches: [ "actions"]
+    branches: [ "actions"]  #Allows testing Actions changes in a fork
   schedule:
     - cron: "0 12 * * 1-5"
 
@@ -20,7 +20,7 @@ jobs:
 
     services:
       mongo:
-        image: mongo:5.0.25
+        image: mongo:7.0.7
         env:
           POSTGRES_USER: sampleUser
           POSTGRES_PASSWORD: openliberty
