--- a/.github/workflows/ci-pull.yml
+++ b/.github/workflows/ci-pull.yml
@@ -21,7 +21,7 @@ jobs:
     services:
       mongo:
         image: mongo:7.0.7
-        # Set health checks to wait until postgres has started
+        # Set health checks to wait until mongo has started
         options: >-
           --health-cmd "echo 'db.runCommand("ping").ok' | mongosh --quiet"
           --health-interval 10s
